--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -6,26 +6,26 @@ input {
 
 filter {
 
-  if [fields][appName] == "payment" and [message] =~ "^\[pid.*" {
-    drop{}
-  }
-
-  if [fields][logType] == "json" and [message] =~ "^\(.*"  {
-    drop {}
-  }
-
-
-  if [fields][appName] == "payment" {
-    grok {
-      match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:level}%{SPACE}in%{SPACE}%{WORD:appname}:%{SPACE}%{GREEDYDATA:msg}" }
-    }
-  }
-
-  if [fields][appName] == "shipping" {
-    grok {
-      match => { "message" => "%{TIMESTAMP_ISO8601}%{SPACE}%{WORD:level}%{SPACE}%{NUMBER:pid}%{SPACE}---%{SPACE}\[%{DATA:threadName}\]%{SPACE}(%{JAVACLASS:className}|%{WORD:w1}\$%{WORD:w2})%{SPACE}:%{SPACE}%{GREEDYDATA:msg}"}
-    }
-  }
+#   if [fields][appName] == "payment" and [message] =~ "^\[pid.*" {
+#     drop{}
+#   }
+#
+#   if [fields][logType] == "json" and [message] =~ "^\(.*"  {
+#     drop {}
+#   }
+#
+#
+#   if [fields][appName] == "payment" {
+#     grok {
+#       match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:level}%{SPACE}in%{SPACE}%{WORD:appname}:%{SPACE}%{GREEDYDATA:msg}" }
+#     }
+#   }
+#
+#   if [fields][appName] == "shipping" {
+#     grok {
+#       match => { "message" => "%{TIMESTAMP_ISO8601}%{SPACE}%{WORD:level}%{SPACE}%{NUMBER:pid}%{SPACE}---%{SPACE}\[%{DATA:threadName}\]%{SPACE}(%{JAVACLASS:className}|%{WORD:w1}\$%{WORD:w2})%{SPACE}:%{SPACE}%{GREEDYDATA:msg}"}
+#     }
+#   }
 
   #if [fields][appName] == "frontend" {
   if [kubernetes][container][name] == "frontend" {
@@ -34,11 +34,11 @@ filter {
     }
   }
 
-  if [fields][logType] == "json" {
-    json {
-      source => "message"
-    }
-  }
+#   if [fields][logType] == "json" {
+#     json {
+#       source => "message"
+#     }
+#   }
 
   if [req][url] == "/health" or [http_path] == "/health" or [http_path] =~ "//api/ratings*" {
     drop{}
