--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -40,7 +40,7 @@ filter {
     }
   }
 
-  if [req][url] == "/health" or [http_path] == "/health" or [http_path] =~ "//api/ratings*" {
+  if [req][url] == "/health" or [http_path] == "/health" or [http_path] =~ "//api/ratings*" or [http_path] =~ "/api/ratings*"  {
     drop{}
   }
 
