terraform variablescd tt

--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -36,7 +36,7 @@
 
 - name: Download and Extract {{COMPONENT}}
   ansible.builtin.unarchive:
-    src: http://nexus.roboshop.internal:8081/repository/{{COMPONENT}}/{{COMPONENT}}-{{APP_VERSION}}.zip
+    src: http://34.200.247.99:8081/repository/{{COMPONENT}}/{{COMPONENT}}-{{APP_VERSION}}.zip
     dest: "{{APP_LOCATION}}"
     remote_src: yes
   become_user: "{{APP_USER}}"
