--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -43,12 +43,12 @@
     enabled: yes
   when: ENV != "ENV"
 
-- name: Configure Filebeat
-  ansible.builtin.include_role:
-    name: elk
-    tasks_from: filebeat
-
-- name: Install Prometheus Node exporter
-  ansible.builtin.include_role:
-    name: prometheus
-    tasks_from: node-exporter
+#- name: Configure Filebeat
+#  ansible.builtin.include_role:
+#    name: elk
+#    tasks_from: filebeat
+#
+#- name: Install Prometheus Node exporter
+#  ansible.builtin.include_role:
+#    name: prometheus
+#    tasks_from: node-exporter
